[build-system]
requires = [
    "poetry-core"
]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "poetry-bug-7611"
version = "0.0.0"
description = ""
readme = "README.md"
authors = [
    "Robert Belter <robertjohnbelter@gmail.com>"
]

# Installed for dev or when installing via pip
[tool.poetry.dependencies]
python = "<3.12,>=3.9"
h5py = "^3.8"
PyYAML = "6.0"
numpy = "^1.23"
scipy = "^1.9.1"
pybind11 = "^2.8.0"
requests = "^2.26"
spiceypy = "^4.0"
bitstring = "^3.1.9"
numpy-quaternion = "^2022.4.3"
chromalog = "^1.0.5"
pyresample = "^1.25"
importlib-metadata = "^6.1.0" # Secret dependency of pyresample for python < 3.10
xarray = "^2023.7.0"
netcdf4 = "^1.6.4"
pydantic = "^2.1.1"
pydantic-yaml = "^1.1.1"

# .group.* installed for dev
[tool.poetry.group.linting.dependencies]
flake8 = "^5"
flake8-eradicate = "^1"
flake8-docstrings = "^1.6"
flake8-rst-docstrings = "^0.2.3"
flake8-pyproject = "^1.2.3"

[tool.poetry.group.docs.dependencies]
Sphinx = "4.2"
sphinx-argparse = "0.3"
sphinx-rtd-theme = "1.0"
pylatex = "^1.4.1"

[tool.poetry.group.tests.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.1.0"
pytest-console-scripts = "1.2.1"
pytest-datafiles = "2.0"
pytest-mock = "3.6.1"
pytest-regressions = "^2.2"
python-dotenv = "0.19"
pandas = "^1.3"

[tool.poetry.group.jupyter.dependencies]
jupyterlab = "^3.6.3"
ipympl = "^0.9.3"
tqdm = "^4.66.1"