[build-system]
requires = [
    "poetry-core"
]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "poetry-bug-7611"
version = "0.0.0"
description = ""
readme = "README.md"
authors = [
    "Robert Belter <robertjohnbelter@gmail.com>"
]

# Installed for dev or when installing via pip
[tool.poetry.dependencies]
python = "<3.12,>=3.9"
restructuredtext-lint = "1.4.0"
future = "0.18.3"
